imported libraries for lcd and transmitter, created fmTransmitterLib.h and .cpp for pins and objects declaration and function definitions

--- a/fm-transmitter-code/platformio.ini
+++ b/fm-transmitter-code/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
+lib_deps = 
+	bitbank2/OneBitDisplay@^2.3.1
+	adafruit/Adafruit Si4713 Library@^1.2.3
