--- a/fm-transmitter-code/platformio.ini
+++ b/fm-transmitter-code/platformio.ini
@@ -13,5 +13,5 @@ platform = atmelavr
 board = nanoatmega328new
 framework = arduino
 lib_deps = 
-	bitbank2/OneBitDisplay@^2.3.1
 	adafruit/Adafruit Si4713 Library@^1.2.3
+	platisd/Nokia 5110 LCD library@^2.7.1
